--- a/home.html
+++ b/home.html
@@ -198,7 +198,7 @@
       <div id="speical-sp">
         <p id="sp1" class="spsp">ENT Specialists</p>
         <p id="sp2" class="spsp">Cardiologists</p>
-        <p id="sp3"class="spsp">Orthopedic surgeons</p>
+        <p id="sp3" class="spsp">Orthopedic surgeons</p>
         <p id="sp4" class="spsp">Psychiatrists</p>
       </div>
       <div id="spbutton">
@@ -212,33 +212,50 @@
         <img class="d-img" src="img/fac/2.png" alt="" />
         <img class="d-img" src="img/fac/3.png" alt="" />
       </div>
-      <div id="int">
-        <h3 class="i-head">You may be interested</h3>
-        <div id="int-img">
-          <img class="i-img" src="img/int/1.png" alt="" />
-          <img class="i-img" src="img/int/2.png" alt="" />
-          <img class="i-img" src="img/int/3.png" alt="" />
-        </div>
-        <div id="int-head">
-          <h4 class="d-head">Hepatobiliary Surgery</h4>
-          <h4 class="d-head">Hepatobiliary Surgery</h4>
-          <h4 class="d-head">Hepatobiliary Surgery</h4>
-        </div>
-        <div id="int-desc">
-          <p class="i-desc">
-            The Hepatobiliary and Transolantology Unit of <br />
-            GG Hospital offers a comprehensive..<span class="i-read">Read More</span>
-          </p>
-          <p class="i-desc">
-            The Hepatobiliary and Transolantology Unit of <br />
-            GG Hospital offers a comprehensive..<span class="i-read">Read More</span>
-          </p>
-          <p class="i-desc">
-            The Hepatobiliary and Transolantology Unit of <br />
-            GG Hospital offers a comprehensive..<span class="i-read">Read More</span>
-          </p>
-        </div>
+    </div>
+    <div id="int">
+      <h3 class="i-head">You may be interested</h3>
+      <div id="int-img">
+        <img class="i-img" src="img/int/1.png" alt="" />
+        <img class="i-img" src="img/int/2.png" alt="" />
+        <img class="i-img" src="img/int/3.png" alt="" />
       </div>
-      <div id="sub"></div>
+      <div id="int-head">
+        <h4 class="d-head">Hepatobiliary Surgery</h4>
+        <h4 class="d-head">Hepatobiliary Surgery</h4>
+        <h4 class="d-head">Hepatobiliary Surgery</h4>
+      </div>
+      <div id="int-desc">
+        <p class="i-desc">
+          The Hepatobiliary and Transolantology Unit of <br />
+          GG Hospital offers a comprehensive..<span class="i-read"
+            >Read More</span
+          >
+        </p>
+        <p class="i-desc">
+          The Hepatobiliary and Transolantology Unit of <br />
+          GG Hospital offers a comprehensive..<span class="i-read"
+            >Read More</span
+          >
+        </p>
+        <p class="i-desc">
+          The Hepatobiliary and Transolantology Unit of <br />
+          GG Hospital offers a comprehensive..<span class="i-read"
+            >Read More</span
+          >
+        </p>
+      </div>
+    </div>
+    <div id="sub">
+      <img id="sub-b" src="img/sub/sub.png" alt="" />
+      <h1 id="sub-head">Subscribe our <br />Newsletter Sign Up</h1>
+      <div id="sub-p"><p>Enter you mail id</p></div>
+      <div id="sub-button">
+        <button type="submit">Subscribe</button>
+      </div>
+      <div id="sub-hr">
+        <hr id="hr" />
+      </div>
+    </div>
   </body>
 </html>
