--- a/home.html
+++ b/home.html
@@ -257,5 +257,66 @@
         <hr id="hr" />
       </div>
     </div>
+    <footer id="foot">
+      <div id="up-foot">
+        <div id="up1">
+          <img id="up-img" src="img/gg_nav_img.png" alt="" />
+          <p id="up-p">
+            GG Hospital is the flagship hospital of the Sree <br />
+            Gokulam Group of Companies. Our journey <br />
+            started on 27th January 2016 for the common <br />
+            people in Trivandrum.
+          </p>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div id="up2">
+          <h4 id="up2-h">About G G</h4>
+          <div id="up2-grid">
+            <p class="up2-class">About Us</p>
+            <p class="up2-class">Academic</p>
+            <p class="up2-class">Hospital</p>
+            <p class="up2-class">Department</p>
+          </div>
+        </div>
+        <div id="up3">
+          <h4 id="up3-h">Legal</h4>
+          <div id="up3-grid">
+            <p class="up3-class">privacy Policy</p>
+            <p class="up3-class">Documentation</p>
+            <p class="up3-class">Terms of Service</p>
+            <p class="up3-class">Site Map</p>
+          </div>
+        </div>
+      </div>
+      <div id="foot-line"><hr id="foot-hr" /></div>
+      <div id="down-foot">
+        <div id="df-1">
+          <i class="fa fa-home"></i>
+          <p id="df1-p">Medical College, Pattom <br>Kumarapuram Rd, Murinjapalam,Thiruvananthapuram, Kerala 695011</p>
+        </div>
+        <div id="df-2">
+          <i class="fa fa-phone"></i>
+          <p id="df2-p">0471 2779100 <br>
+            0471 2779101  <br>        
+            0471 4299299</p>
+        </div>
+        <div id="df-3">
+          <i class="fa fa-envelope"></i>
+          <p id="df2-p">gghospitalphkpl@gmail.com <br>
+            mdoffice@gg-hospital.com</p>
+        </div>
+        <div id="df-4">
+          <h3 id="df4-h">We are on Social Media</h3>
+          <div id="df4-icon">
+            <p>
+              <i class="fa fa-linkedin"></i>&nbsp;
+              <i class="fa fa-youtube-play"></i>&nbsp;
+              <i class="fa fa-instagram"></i>&nbsp;
+              <i class="fa fa-facebook-f"></i>&nbsp;
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
