fix-align-button

--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
             <div class="row">
               <input type="text" placeholder="Department" />
               <input type="text" placeholder="Doctor" />
-              <button type="submit">Book an Appoinment</button>
+              <button id="form-button" type="submit">Book an Appoinment</button>
             </div>
           </form>
         </div>
